--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ body {
   font-size: 10px;
   font-family: 'Mukta', sans-serif;
 }
+
 .app {
   min-height: 100vh;
   background: rgb(58, 76, 98);
@@ -17,18 +18,6 @@ body {
   background-size: cover;
   overflow: hidden;
 
-  &__recent {
-    background: #edf2f7;
-    min-height: 10rem;
-    border-radius: 0rem 0rem 1rem 1rem;
-    padding: 1rem;
-  }
-  &__recent-name {
-    text-align: left;
-    font-size: 1.6rem;
-    border-bottom: 1px solid rgb(58, 76, 98);
-    color: rgb(77, 11, 131);
-  }
   &__search-container {
     text-align: center;
     padding: 0.5rem 2rem;
@@ -276,7 +265,7 @@ body {
   &__main-heading {
     font-size: 2.2rem;
     text-align: center;
-    font-weight: 400;
+    font-weight: 300;
   }
   &__description {
     font-size: 1.3rem;
@@ -313,5 +302,35 @@ body {
   &__footer-text {
     font-size: 1.3rem;
     color: rgb(102, 102, 102);
+  }
+}
+.main {
+  padding: 1rem;
+  margin-top: 3rem;
+
+  &__box {
+    background: #d3d3d3;
+    margin: 2rem 1rem;
+    // opacity: 0.8;
+    border-radius: 5px;
+    box-shadow: 0 0 2px 1px #333;
+    padding: 1rem 2rem;
+  }
+  &__heading-3 {
+    font-weight: 400;
+    border-bottom: 1px solid rgb(112, 146, 187);
+    text-align: center;
+    font-size: 1.9rem;
+  }
+  &__description {
+    font-weight: 200;
+    font-size: 1.5rem;
+    margin-top: 1rem;
+  }
+  &__info {
+    color: rgb(136, 136, 136);
+    text-align: center;
+    margin-top: 5rem;
+    font-size: 2rem;
   }
 }
