Added alt text img, opcity in next days, fixed showing error, simple media queries

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,7 @@ body {
     color: rgb(218, 67, 67);
     text-align: center;
     font-size: 1.7rem;
+    margin-top: 3rem;
   }
 }
 .Clear {
@@ -172,7 +173,8 @@ body {
   }
 }
 .next-day {
-  background: #030a23;
+  background: #020a27;
+  opacity: 0.9;
   color: #edf2f7;
   padding: 1rem;
   margin: 0.5rem;
