--- a/src/App.scss
+++ b/src/App.scss
@@ -246,6 +246,9 @@ body {
     position: relative;
     color: #edf2f7;
     font-size: 2rem;
+    background: transparent;
+    cursor: pointer;
+    border: none;
     .fa-times {
       color: #333;
     }
@@ -263,6 +266,7 @@ body {
     font-size: 1.2rem;
     padding: 0.5rem;
     margin: 1rem 0.5rem;
+    cursor: pointer;
   }
   &__main-heading {
     font-size: 2.2rem;
@@ -292,6 +296,7 @@ body {
     background: transparent;
     margin-left: 1rem;
     font-size: 1.2rem;
+    cursor: pointer;
   }
   &__input:focus {
     outline: none;
